--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <a href="mary celeste.html"target="blank"><img src="mary.jpg"width="500"height="400">
 <p><font size="13">La nave alla deriva</p></a>
 
-
+<div id="sfc397zkxh3wq1xsfx5mepgfy5cgfxu8czj"></div><script type="text/javascript" src="https://counter4.optistats.ovh/private/counter.js?c=397zkxh3wq1xsfx5mepgfy5cgfxu8czj&down=async" async></script><noscript><a href="https://www.contatoreaccessi.com" title="contatore visite gratis"><img src="https://counter4.optistats.ovh/private/contatoreaccessi.php?c=397zkxh3wq1xsfx5mepgfy5cgfxu8czj" border="0" title="contatore visite gratis" alt="contatore visite gratis"></a></noscript>
 
 
 
