--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p><font size="13">La nave alla deriva</p></a>
 <a href="sitografia.html" target="blank"> Sitografia </a> 
 <div id="sfc397zkxh3wq1xsfx5mepgfy5cgfxu8czj"></div><script type="text/javascript" src="https://counter4.optistats.ovh/private/counter.js?c=397zkxh3wq1xsfx5mepgfy5cgfxu8czj&down=async" async></script><noscript><a href="https://www.contatoreaccessi.com" title="contatore visite gratis"><img src="https://counter4.optistats.ovh/private/contatoreaccessi.php?c=397zkxh3wq1xsfx5mepgfy5cgfxu8czj" border="0" title="contatore visite gratis" alt="contatore visite gratis"></a></noscript>
-
+<div id="ww_7684f633e13a5" v='1.3' loc='id' a='{"t":"horizontal","lang":"it","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Altre previsioni: <a href="https://oneweather.org/fr/paris/30_jours/" id="ww_7684f633e13a5_u" target="_blank">Meteo paris 30 jours</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_7684f633e13a5"></script>
 
 
 
