--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 </head>
 <body>
 <body bgcolor="black">
+  <a href="https://time.is/Erbusco" id="time_is_link" rel="nofollow" style="font-size:36px">L\'ora in Erbusco:</a>
+<span id="Erbusco_z723" style="font-size:36px"></span>
+<script src="//widget.time.is/t.js"></script>
+<script>
+time_is_widget.init({Erbusco_z723:{}});
+</script>
+
 <h1><center><font color="red">Il paranormale</font></center></h1>
 <br><br><br>
 <p><center><font color="white">Il termine paranormale si applica a quei fenomeni, detti anche anomali, che risultano contrari alle leggi della fisica e agli assunti scientifici e che, se misurati secondo il metodo scientifico, sono risultati inesistenti o, nel caso di fenomeno esistente, comunque spiegabili solo sulla base delle conoscenze attuali.
