--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@ time_is_widget.init({Erbusco_z723:{}});
 </script>
 
 <h1><center><font color="red">Il paranormale</font></center></h1>
+  <p class="hover:bg-light-blue-200
+  hover:text-light-blue-800 
+  group 
+  flex 
+  items-center 
+  rounded-md 
+  bg-light-blue-100 
+  text-light-blue-600 
+  text-sm 
+  font-medium 
+  px-4 
+  py-2">
+    Hi
+</p>
 <br><br><br>
 <p><center><font color="white">Il termine paranormale si applica a quei fenomeni, detti anche anomali, che risultano contrari alle leggi della fisica e agli assunti scientifici e che, se misurati secondo il metodo scientifico, sono risultati inesistenti o, nel caso di fenomeno esistente, comunque spiegabili solo sulla base delle conoscenze attuali.
 </center></p>
